--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kasa, location de logements entre particuliers</title>
-		<meta name="description" content="Kasa, service d'annonces de location de logements entre particuliers" />
+    <title>Kasa, location de logements entre particuliers à Paris</title>
+		<meta name="description" content="Kasa, service d'annonces de location de logements parisiens entre particuliers" />
   </head>
   <body>
     <div id="root"></div>
